RESOLVED FIXED120186
[WK2] Assertion failures when loading XSL stylesheets with NetworkProcess
https://bugs.webkit.org/show_bug.cgi?id=120186
Summary [WK2] Assertion failures when loading XSL stylesheets with NetworkProcess
Alexey Proskuryakov
Reported 2013-08-22 17:53:58 PDT
Synchronous loads don't have page or frame IDs, they should. <rdar://problem/14080273>
Attachments
proposed fix (4.20 KB, patch)
2013-08-22 17:58 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2013-08-22 17:58:31 PDT
Created attachment 209414 [details] proposed fix
WebKit Commit Bot
Comment 2 2013-08-23 09:50:19 PDT
Comment on attachment 209414 [details] proposed fix Clearing flags on attachment: 209414 Committed r154490: <http://trac.webkit.org/changeset/154490>
WebKit Commit Bot
Comment 3 2013-08-23 09:50:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.